[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -43.0
margin_right = 47.5
margin_bottom = 33.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 95.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 95.0
margin_bottom = 14.0
text = "Pausado"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 95.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 10 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 95.0
margin_bottom = 52.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Resumir Jogo"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 95.0
margin_bottom = 76.0
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
